--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
@@ -163,6 +163,7 @@ copy /Y "$(SolutionDir)Extension\core\lib\x64\fmod_vc.lib" "$(OutDir)"</Command>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="GameClearWidgetScript.h" />
     <ClInclude Include="Scripts\Widget\GameOverWidgetScript.h" />
     <ClInclude Include="Scripts\Player\PlayerMovement.h" />
     <ClInclude Include="Scripts\Enemy\SpawnerUsingSingleton\EnemySpawnTriggerBox.h" />
@@ -239,6 +240,7 @@ copy /Y "$(SolutionDir)Extension\core\lib\x64\fmod_vc.lib" "$(OutDir)"</Command>
     <ClInclude Include="Scripts\Widget\VignetteWidgetScript.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="GameClearWidgetScript.cpp" />
     <ClCompile Include="Scripts\Widget\GameOverWidgetScript.cpp" />
     <ClCompile Include="Scripts\Player\PlayerMovement.cpp" />
     <ClCompile Include="Scripts\Enemy\SpawnerUsingSingleton\EnemySpawnTriggerBox.cpp" />
