--- a/D2D-AliceEngine/Engine/Engine.vcxproj.filters
+++ b/D2D-AliceEngine/Engine/Engine.vcxproj.filters
@@ -277,6 +277,7 @@
       <Filter>Helper</Filter>
     </ClInclude>
     <ClInclude Include="Component\ProgressBarComponent.h" />
+    <ClInclude Include="Component\ParticleComponent.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Component\VideoComponent.cpp">
@@ -487,10 +488,17 @@
       <Filter>Helper</Filter>
     </ClCompile>
     <ClCompile Include="Component\ProgressBarComponent.cpp" />
+    <ClCompile Include="Component\ParticleComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Shader\GradationShader.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
+    <FxCompile Include="Shader\ParticleColorChange.hlsl" />
+    <FxCompile Include="Shader\ParticleDistortion.hlsl" />
+    <FxCompile Include="Shader\ParticleBlending.hlsl" />
+    <FxCompile Include="Shader\ParticlePhysics.hlsl" />
+    <FxCompile Include="Shader\ParticleEnvironment.hlsl" />
+    <FxCompile Include="Shader\ParticleSpecial.hlsl" />
   </ItemGroup>
 </Project>
