--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj.filters
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj.filters
@@ -169,9 +169,6 @@
     <ClInclude Include="Resource.h">
       <Filter>PreCompiledHeader</Filter>
     </ClInclude>
-    <ClInclude Include="Scripts\Audio\TitleAudioScript.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
     <ClInclude Include="Scripts\Player\PlayerManager.h">
       <Filter>Scripts\Player</Filter>
     </ClInclude>
@@ -307,6 +304,15 @@
     <ClInclude Include="Scripts\Enemy\Jump\JumpTrigger.h">
       <Filter>PreCompiledHeader</Filter>
     </ClInclude>
+    <ClInclude Include="Scripts\Audio\GameClearAudioScript.h">
+      <Filter>Scripts\Audio</Filter>
+    </ClInclude>
+    <ClInclude Include="Scripts\Audio\TitleAudioScript.h">
+      <Filter>Scripts\Audio</Filter>
+    </ClInclude>
+    <ClInclude Include="Scripts\Audio\StageAudioScript.h">
+      <Filter>Scripts\Audio</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DemoGameApp.cpp">
@@ -401,9 +407,6 @@
     </ClCompile>
     <ClCompile Include="Scene\KangScene\KangScene.cpp">
       <Filter>Scene</Filter>
-    </ClCompile>
-    <ClCompile Include="Scripts\Audio\TitleAudioScript.cpp">
-      <Filter>Scripts</Filter>
     </ClCompile>
     <ClCompile Include="Prefab\Enemy\EnemyBike.cpp">
       <Filter>Prefab\Enemy</Filter>
@@ -525,6 +528,15 @@
     <ClCompile Include="Scripts\Enemy\Jump\JumpTrigger.cpp" />
     <ClCompile Include="Scripts\Widget\GameClearWidgetScript.cpp">
       <Filter>Scripts\Widget</Filter>
+    </ClCompile>
+    <ClCompile Include="Scripts\Audio\GameClearAudioScript.cpp">
+      <Filter>Scripts\Audio</Filter>
+    </ClCompile>
+    <ClCompile Include="Scripts\Audio\TitleAudioScript.cpp">
+      <Filter>Scripts\Audio</Filter>
+    </ClCompile>
+    <ClCompile Include="Scripts\Audio\StageAudioScript.cpp">
+      <Filter>Scripts\Audio</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
