--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
@@ -174,6 +174,7 @@ copy /Y "$(SolutionDir)Extension\core\lib\x64\fmod_vc.lib" "$(OutDir)"</Command>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Helper\ParticleHelper.h" />
+    <ClInclude Include="Scripts\Widget\LocationIndicatorWidgetScript.h" />
     <ClInclude Include="Scripts\Audio\GameClearAudioScript.h" />
     <ClInclude Include="Scripts\Enemy\Jump\JumpTrigger.h" />
     <ClInclude Include="Scripts\Enemy\Spawn\EnemyDespawner.h" />
@@ -256,6 +257,7 @@ copy /Y "$(SolutionDir)Extension\core\lib\x64\fmod_vc.lib" "$(OutDir)"</Command>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Helper\ParticleHelper.cpp" />
+    <ClCompile Include="Scripts\Widget\LocationIndicatorWidgetScript.cpp" />
     <ClCompile Include="Scripts\Audio\GameClearAudioScript.cpp" />
     <ClCompile Include="Scripts\Enemy\Jump\JumpTrigger.cpp" />
     <ClCompile Include="Scripts\Enemy\Spawn\EnemyDespawner.cpp" />
